# trinity-intelligence-platform

./: .env.example  .gitignore  AUDIT_CHECKLIST.txt  AUDIT_REPORT_2025-11-17.md  AUDIT_SUMMARY.txt  AZURE_DEPLOYMENT_COMPLETE.md  AZURE_DEPLOYMENT_FINAL.md  AZURE_DEPLOYMENT_PROGRESS.md  AZURE_DEPLOYMENT_STATUS.md  BACKWARD_DEPENDENCY_MAP.md  COMPLETE_SERVICES_ANALYSIS.md  DEPLOYMENT_COMPLETE.md  DETAILED_AUDIT_REPORT.txt  DOCUMENT_GRAPH_QUERIES.md  DOCUMENT_GRAPH_VALIDATED.md  IMPLEMENTATION_METHODOLOGY_CORRECTED.md  INFORMATION_FLOW.md  LOCAL_AZURE_PARITY.md  MASTER_SYSTEM_VISUALIZATION.md  Makefile  NEO4J_QUERIES.md  NEO4J_VISUAL_QUERIES.md  NEO4J_WORKING_QUERY.txt  PHASE1_INTEGRATION_COMPLETE.md  PILOT_COMPLETE.md  README.md  REINDEX_WITH_IMPROVED_UX.md  SESSION_COMPLETE_SUMMARY.md  SOP_VISUALIZATION_QUERIES.md  STATUS.md  TRINITY_COMPLETE_DEPENDENCY_MAP.md  VIEW_DOCUMENT_GRAPH.md  WORKING_GRAPH_QUERIES.md  docker-compose-simplified.yml  docker-compose-working.yml  docker-compose.yml  document-service-links.csv  pyproject.toml
.github/workflows/: azure-deploy.yml  ci.yml
archive/session-logs/: AZURE_DEPLOYMENT_PAUSED.md  OPTIMIZATION_ITEMS_COMPLETE.md  P0_P1_FIXES_COMPLETE.md  REMAINING_GAPS.md
azure/: AZURE_DEPLOYMENT_GUIDE.md  container-apps-manifest.yaml  deploy.sh  infrastructure.bicep
cli/: trinity_cli.py
scripts/: archive_stale_documents.py  end_to_end_test.py  import_analysis_data.py  index_all_documentation.py  index_sops_to_neo4j.py  platform_validation.py  populate_vector_index.py  test_integration_end_to_end.py  visualize_flow.py
(+78 files in other folders)
